compiler/tests/en/errors/type_mismatch.salam
// EXPECT: E002
func main:
    x i32 = "hello"
end
